# finite-typelits

./: LICENSE  finite-typelits.cabal
.github/workflows/: ci.yaml
src/Data/: Finite.hs
src/Data/Finite/: Integral.hs  Internal.hs
src/Data/Finite/Integral/: Internal.hs
src/Data/Finite/Internal/: Integral.hs  With.hs
test/: Main.hs
