name:                finite-typelits
version:             0.1.0.0
synopsis:            A type inhabited by finitely many elements, indexed by type-level naturals.
description:         
homepage:            https://github.com/mniip/finite-typelits
license:             BSD3
license-file:        LICENSE
author:              mniip
maintainer:          mniip@mniip.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Finite, Data.Finite.Internal
  build-depends:       base == 4.*
  hs-source-dirs:      src
  default-language:    Haskell2010
