name:                finite-typelits
version:             0.1.4.2
synopsis:            A type inhabited by finitely many values, indexed by type-level naturals.
description:         A type inhabited by finitely many values, indexed by type-level naturals.
homepage:            https://github.com/mniip/finite-typelits
license:             BSD3
license-file:        LICENSE
author:              mniip
maintainer:          mniip@mniip.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Finite, Data.Finite.Internal
  build-depends:       base >= 4.7
                     , deepseq >= 1.4
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-Suite finite-typelits-tests
  Type:                     exitcode-stdio-1.0
  Main-is:                  test/Main.hs
  Build-depends:            finite-typelits
                          , base >= 4.9
                          , deepseq >= 1.4
                          , QuickCheck
